--- a/styles/Homepage.module.css
+++ b/styles/Homepage.module.css
@@ -1,29 +1,33 @@
 
 .banner-main {
 
-  margin: 0rem 10rem 0rem 10rem;
+  margin: 0rem 10rem 2rem 10rem;
   height: 30rem;
   padding: 2rem;
 
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .banner-main .text p {
-  font-size: 1.5rem;
+  font-size: clamp(0.5, 2vw, 1.5rem);
   color: var(--color-text-dark);
 }
+
 
 .signup-btn {
   background-color: var(--color-primary);
   border: none;
-  padding: 0.5rem;
+  padding: 0.7rem;
   width: 9rem;
   border-radius: 0.2rem;
-  font-size: 1rem;
+  font-size: 1.3rem;
 }
 
 .banner-main h1 {
-  font-size: 5rem;
+  font-size: clamp(3rem, 5vw, 5rem);;
+
 }
 
 .Homepage {
@@ -31,6 +35,7 @@
 }
 
 .banner-main .text {
+
   display: flex;
   align-items: flex-start;
   flex-direction: column;
@@ -39,12 +44,12 @@
 
 .banner-main .image {
   width: 20rem;
-  transform: translate(-10rem);
+  margin-right: 5rem;
 }
 
 .image .arrow {
   height: 35rem;
-  transform: translate(5rem, 0rem) rotate(-10deg);
+  position: absolute;
 
 }
 
@@ -120,8 +125,9 @@
 /* banner center */
 .banner-center {
 
-  margin: 0rem 10rem 0rem 10rem;
+  margin: 0rem auto 0rem auto;
   height: 30rem;
+  width: 100%;
   padding: 2rem;
   display: flex;
   align-items: center;
