--- a/components/fileBar/FileBar.module.css
+++ b/components/fileBar/FileBar.module.css
@@ -5,6 +5,11 @@
   border-radius: 1rem;
 }
 
+.fileBarRootNotes:hover {
+  color: var(--color-primary);
+  font-style: italic;
+}
+
 .fileBarHeader {
   padding: 0.5rem;
   display: flex;
@@ -30,6 +35,7 @@
   border-bottom: 1px solid var(--color-text-dark);
   display: flex;
   flex-direction: row;
+  cursor: pointer;
   justify-content: space-between;
 }
 
