--- a/components/noteEditor/NoteEditor.module.css
+++ b/components/noteEditor/NoteEditor.module.css
@@ -1,4 +1,77 @@
-.NoteEditor {
-  border: white solid 1px;
-  width: 80vw;
+.noteEditor {
+  width: 70vw;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  background-color: var(--color-background-light);
 }
+
+.noteEditorMain {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex: 1;
+  padding: 1rem;
+}
+
+.noteEditorDate {
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+  color: var(--color-primary);
+}
+
+.noteEditorTextarea {
+  padding-top: 2rem;
+  background-color: transparent;
+  flex: 1;
+  border: none;
+  border-top: 3px solid var(--color-text-dark);
+  width: 100%;
+  font-size: 1.2rem;
+  box-sizing: border-box;
+  color: var(--color-text);
+  resize: none;
+}
+
+.noteEditorInput {
+  font-size: 2.5rem;
+  background-color: transparent;
+  border: none;
+  color: var(--color-primary);
+  padding: none;
+}
+
+.noteEditorInput:focus,
+.noteEditorTextarea:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.noteEditorBtns {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  padding: 1rem;
+}
+
+.noteEditorBtns button {
+  background-color: transparent;
+  border: none;
+  color: var(--color-text-dark);
+  cursor: pointer;
+}
+
+.noteEditorHeader {
+  display: flex;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 3px var(--color-background) solid;
+  color: var(--color-text-dark);
+  font-size: 1.2rem;
+}
+
