--- a/components/Header/EditorHeader.module.css
+++ b/components/Header/EditorHeader.module.css
@@ -19,5 +19,22 @@
   font-size: 1rem;
   padding: 0.5rem 1.5rem 0.5rem 1.5rem;
   border-radius: 0.5rem;
+  cursor: pointer;
 
+}
+
+.editorHeaderBtns {
+  background-color: transparent;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+}
+
+.editorHeaderBtns:hover {
+  border-bottom: 1px solid black;
+}
+
+.editorHeaderBtnDiv {
+  display: flex;
+  gap: 1rem;
 }
